# web-task-status-celery

./: LICENSE  README.md  app.py  celery_config.py  pyproject.toml  rabbitmq.conf  requirements.txt  tasks.py
docker/: docker-compose.yaml
templates/: index.html
