[tool.poetry]
name = "web-task-status-celery"
version = "0.1.0"
description = ""
authors = ["Lucas Moura de Almeida <lucas.moura020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
